Target overlay has highest z-index to prevent other untargeted overlays from overlapping.

--- a/main.css
+++ b/main.css
@@ -137,6 +137,7 @@ footer {
 .overlay:target {
     opacity: 1;
     visibility: visible;
+    z-index: 10;
 }
 .popup {
     background: #fff;
